Closed Bug 824160 Opened 12 years ago Closed 12 years ago

Assertion in SetMysteryBlobInfo

Categories

(Core :: Storage: IndexedDB, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
B2G C3 (12dec-1jan)
blocking-basecamp +
Tracking Status
firefox19 --- fixed
firefox20 --- fixed
b2g18 --- fixed

People

(Reporter: gwagner, Assigned: dougt)

Details

Attachments

(1 file)

Seen on otoro with debug build during watching a video from the video app. Program received signal SIGSEGV, Segmentation fault. 0x4167d064 in mozilla::dom::ipc::Blob<(mozilla::dom::ipc::ActorFlavorEnum)1>::SetMysteryBlobInfo (this=0x45b63c40, aName=..., aContentType=..., aLength=4888, aLastModifiedDate=18446744073709551615) at /Volumes/2mac/gaia/3src/dom/ipc/Blob.cpp:1071 1071 MOZ_ASSERT(aLastModifiedDate != UINT64_MAX); (gdb) bt #0 0x4167d064 in mozilla::dom::ipc::Blob<(mozilla::dom::ipc::ActorFlavorEnum)1>::SetMysteryBlobInfo (this=0x45b63c40, aName=..., aContentType=..., aLength=4888, aLastModifiedDate=18446744073709551615) at /Volumes/2mac/gaia/3src/dom/ipc/Blob.cpp:1071 #1 0x40e692fe in ResolveMysteryFile (aBlob=0x446bca60, aName=..., aContentType=..., aSize=4888, aLastModifiedDate=18446744073709551615) at /Volumes/2mac/gaia/3src/dom/indexedDB/IDBObjectStore.cpp:614 #2 0x40e6b168 in mozilla::dom::indexedDB::IDBObjectStore::StructuredCloneReadCallback (aCx=0x4397c370, aReader=0xbe82a1e0, aTag=4294934533, aData=0, aClosure=0x4576d684) at /Volumes/2mac/gaia/3src/dom/indexedDB/IDBObjectStore.cpp:1231 #3 0x4202a58e in JSStructuredCloneReader::startRead (this=0xbe82a1e0, vp=0xbe82a178) at /Volumes/2mac/gaia/3src/js/src/jsclone.cpp:1085 #4 0x4202aa1a in JSStructuredCloneReader::read (this=0xbe82a1e0, vp=0x446a2d90) at /Volumes/2mac/gaia/3src/js/src/jsclone.cpp:1184 #5 0x420279e0 in js::ReadStructuredClone (cx=0x4397c370, data=0x451676e0, nbytes=496, vp=0x446a2d90, cb=0xbe82a37c, cbClosure=0x4576d684) at /Volumes/2mac/gaia/3src/js/src/jsclone.cpp:143 #6 0x42003040 in JS_ReadStructuredClone (cx=0x4397c370, buf=0x451676e0, nbytes=496, version=1, vp=0x446a2d90, optionalCallbacks=0xbe82a37c, closure=0x4576d684) at /Volumes/2mac/gaia/3src/js/src/jsapi.cpp:6316 #7 0x42003432 in JSAutoStructuredCloneBuffer::read (this=0x4576d684, cx=0x4397c370, vp=0x446a2d90, optionalCallbacks=0xbe82a37c, closure=0x4576d684) at /Volumes/2mac/gaia/3src/js/src/jsapi.cpp:6436 #8 0x40e6a7fa in mozilla::dom::indexedDB::IDBObjectStore::DeserializeValue (aCx=0x4397c370, aCloneReadInfo=..., aValue=0x446a2d90) at /Volumes/2mac/gaia/3src/dom/indexedDB/IDBObjectStore.cpp:1011 #9 0x40e72768 in GetSuccessResult (this=0x4576d650, aCx=0x4397c370, aVal=0x446a2d90) at /Volumes/2mac/gaia/3src/dom/indexedDB/IDBObjectStore.cpp:2941 #10 0x40e7a152 in mozilla::dom::indexedDB::IDBRequest::NotifyHelperCompleted (this=0x446a2d60, aHelper=0x4576d650) at /Volumes/2mac/gaia/3src/dom/indexedDB/IDBRequest.cpp:114 #11 0x40e41a40 in mozilla::dom::indexedDB::AsyncConnectionHelper::Run (this=0x4576d650) at /Volumes/2mac/gaia/3src/dom/indexedDB/AsyncConnectionHelper.cpp:219 #12 0x40e43056 in mozilla::dom::indexedDB::AsyncConnectionHelper::OnParentProcessRequestComplete (this=0x4576d650, aResponseValue=...) at /Volumes/2mac/gaia/3src/dom/indexedDB/AsyncConnectionHelper.cpp:577 #13 0x40ea879e in mozilla::dom::indexedDB::IndexedDBObjectStoreRequestChild::Recv__delete__ (this=0x457a4490, aResponse=...) at /Volumes/2mac/gaia/3src/dom/indexedDB/ipc/IndexedDBChild.cpp:1101 #14 0x417c240a in mozilla::dom::indexedDB::PIndexedDBRequestChild::OnMessageReceived (this=0x457a4490, __msg=...) at /Volumes/2mac/gaia/3src/debotorobuild/ipc/ipdl/PIndexedDBRequestChild.cpp:189 #15 0x417fd2fa in mozilla::dom::PContentChild::OnMessageReceived (this=0x4392c818, __msg=...) at /Volumes/2mac/gaia/3src/debotorobuild/ipc/ipdl/PContentChild.cpp:2083 #16 0x416bd166 in mozilla::ipc::AsyncChannel::OnDispatchMessage (this=0x4392c820, msg=...) at /Volumes/2mac/gaia/3src/ipc/glue/AsyncChannel.cpp:473 #17 0x416c7fe6 in mozilla::ipc::RPCChannel::OnMaybeDequeueOne (this=0x4392c820) at /Volumes/2mac/gaia/3src/ipc/glue/RPCChannel.cpp:402 #18 0x4168910e in DispatchToMethod<mozilla::dom::ContentParent, void (mozilla::dom::ContentParent::*)()> (obj=0x4392c820, method=0x416c7e2d <mozilla::ipc::RPCChannel::OnMaybeDequeueOne()>, arg=...) at /Volumes/2mac/gaia/3src/ipc/chromium/src/base/tuple.h:383 #19 0x41688f80 in RunnableMethod<mozilla::dom::ContentParent, void (mozilla::dom::ContentParent::*)(), Tuple0>::Run (this=0x43901ba0) at /Volumes/2mac/gaia/3src/ipc/chromium/src/base/task.h:307
blocking-basecamp: --- → ?
Summary: Segmentation fault in SetMysteryBlobInfo → Assertion in SetMysteryBlobInfo
(In reply to Doug Turner (:dougt) from comment #1) > Gregor - Any idea of the str? > Just open the video app and start playing a video.
Assignee: nobody → doug.turner
blocking-basecamp: ? → +
Target Milestone: --- → B2G C3 (12dec-1jan)
Attached patch patch v.1Splinter Review
Attachment #695596 - Flags: review?(bent.mozilla)
Attachment #695596 - Flags: review?(bent.mozilla) → review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: