Bug 824160 - Assertion in SetMysteryBlobInfo. GetMozLastModifiedDate should return modification date even if it is presently unknown. r=bent a=blocking-basecamp